fix: increase ticket width on smaller screens

--- a/src/Components/TicketReady/TicketReady.css
+++ b/src/Components/TicketReady/TicketReady.css
@@ -73,8 +73,8 @@
 
 @media screen and (max-width: 940px) {
 	.ticket-ready-container {
-		max-width: 95%;
-		padding: 2rem;
+		max-width: 100%;
+		padding: 2rem 1rem;
 	}
 
 	.ticket-body {
